--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>Market Insider</title>
 
 
     <!-- compiled css output -->
@@ -19,9 +19,21 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/directives.js"></script>
+    <script src="js/filters.js"></script>
+
+    <!-- third party libraries -->
+    <script src="lib/d3/d3.min.js"></script>
+    <script src="lib/nvd3/nv.d3.js"></script>
+    <script src="lib/angular-nvd3/dist/angular-nvd3.min.js"></script>
+    <script src="lib/nv-chart/nv-chart.min.js"></script>
+
+    <link href="lib/nvd3/src/nv.d3.min.css" rel="stylesheet">
+    <link href="lib/nv-chart/nv-chart.min.css" rel="stylesheet">
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="marketInsider">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
